# Projet_Opti

./: project_multinomial_sparse2.ipynb  projet_opti.ipynb  pyproject.toml
