[tool.poetry]
name = "Projet Opti"
version = "0.1.0"
description = ""
authors = ["Guillaume <guillaume.peltier.pro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
jupyterlab = "^3.2.8"
numpy = "^1.22.1"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
